strategies/canary/04-flagger-with-nginx/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
  
spec:
  selector:
    matchLabels:
      app: myapp    
  replicas: 5
  template:
    metadata:    
      labels:
        app: myapp        
    spec:
      containers:
      - name: myapp
        image: liammoat/canary-app:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000
        - containerPort: 8080
