strategies/canary/04-flagger-with-nginx/manifests/fortio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: fortio/fortio:latest_release          
        args: 
         - "load"
         - "-allow-initial-errors"  
         - "-t"       
         - "0"
         - "http://k8s.liammoat.com/canary-flagger/"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-fortio
        - containerPort: 8079
          name: grpc-ping
